techila/lib/Techila.h

typedef char *LPSTR;

int techila_init();

int techila_unload(unsigned char removeTempDir);


// peach
  /**
   * Get a handle for the Peach object. This must be called first before
   * using other peach_ -functions.
   * @return peach handle to be used when calling other functions
   */
  int techila_peach_handle();


  /**
   * Set the peach name.
   * @param handle the peach handle
   * @param name the name
   */
  int techila_peach_setName(int handle, LPSTR name);


  /**
   * Set the description.
   * @param handle the peach handle
   * @param description description
   */
  int techila_peach_setDescription(int handle, LPSTR description);


  /**
   * Enable messages printing.
   * @param handle the peach handle
   * @param messages true or false
   */
  int techila_peach_setMessages(int handle, unsigned char messages);


  /**
   * Set the project priority as integer, valid values
   * 1 (highest) - 7 (lowest).
   * @param handle the peach handle
   * @param priority
   */
  int techila_peach_setPriorityI(int handle, int priority);


  /**
   * Set the project priority in string format. Valid values are
   * "HIGHEST", "HIGH", "ABOVE_NORMAL", "NORMAL", "BELOW_NORMAL"
   * "LOW" ans "LOWEST".
   * @param handle the peach handle
   * @param priority Priority string
   */
  int techila_peach_setPriority(int handle, LPSTR priority);


  /**
   * Set project ID. Use for attaching to a previously created project.
   * @param handle the peach handle
   * @param projectid
   */
  int techila_peach_setProjectId(int handle, int projectid);


  /**
   * Set number of jobs to be created.
   * @param handle the peach handle
   * @param jobs
   */
  int techila_peach_setJobs(int handle, int jobs);


  /**
   * Allow partial results in download. Ignored when streaming is enabled.
   * @param handle the peach handle
   * @param allowPartial
   */
  int techila_peach_setAllowPartial(int handle, unsigned char allowPartial);


  /**
   * Remove project after it is done (done within done()). Default true.
   * @see done()
   * @param handle the peach handle
   * @param remove
   */
  int techila_peach_setRemove(int handle, unsigned char remove);


  /**
   * Cleanup handle temporary files at done(). Default true.
   * @param handle the peach handle
   * @param cleanup
   */
  int techila_peach_setCleanup(int handle, unsigned char cleanup);


  /**
   * Close the handle at done(). Default true.
   * @param handle the peach handle
   * @param close
   */
  int techila_peach_setClose(int handle, unsigned char close);


  /**
   * Add a source file.
   * @param handle the peach handle
   * @param file source filename
   */
  int techila_peach_addSourceFile(int handle, LPSTR file);


  /**
   * Check if the source files have changed compared to saved state.
   * @param handle the peach handle
   * @return true if sources have changed
   */
  int techila_peach_sourcesChanged(int handle);


  /**
   * Store source extra parameters. Use for example compiler version,
   * 32/64 -bits, etc...
   * @param handle the peach handle
   * @param name name of the parameter
   * @param value vale of the parameter
   */
  int techila_peach_putSourceExtras(int handle, LPSTR name,  LPSTR value);


  /**
   * Use a precreated executor bundle.
   * @param handle the peach handle
   * @param name name of the bundle
   */
  int techila_peach_setExeBundleName(int handle, LPSTR name);


  /**
   * Set the executable. This can be used the executable is not within the
   * executor bundle but already exists on the worker. E.g. %L(resource) can
   * be used here or a reference to a preinstalled binary, or %A(feature)
   * to use a feature configured for the worker.
   * @param handle the peach handle
   * @param executable
   */
  int techila_peach_setExecutable(int handle, LPSTR executable);


  /**
   * Set the skip digest bit for the executor bundle.
   * @param handle the peach handle
   * @param skipDigest
   */
  int techila_peach_setExeSkipDigest(int handle, unsigned char skipDigest);


  /**
   * Add a file into the Executor bundle with given parameters. Use
   * "exe" as resource name for the actual executable to be run, for
   * other files the resource can be anything.
   * @param handle the peach handle
   * @param res resource name
   * @param file the file name (with path)
   * @param osname osname
   * @param processor processor architechture
   */
  int techila_peach_addExeFile(int handle, LPSTR res, LPSTR file, LPSTR osname, LPSTR processor);


  /**
   * Put a value into the Executor bundles extra parameters.
   * @param handle the peach handle
   * @param name
   * @param value
   */
  int techila_peach_putExeExtras(int handle, LPSTR name, LPSTR value);


  /**
   * Add an import for the Executor bundle.
   * @param handle the peach handle
   * @param importName
   */
  int techila_peach_addExeImport(int handle, LPSTR importName);


  /**
   * Add an outpuf file definition, eg. "output;file=outputfile.dat".
   * If no output files are defined the default
   * "output;file=techila_peach_outputfile.dat" is used.
   * @param handle the peach handle
   * @param def
   */
  int techila_peach_addOutputFile(int handle, LPSTR def);


  /**
   * Start defining a new data bundle. This must be called first before
   * any other data bundle related commands.
   * @param handle the peach handle
   */
  int techila_peach_newDataBundle(int handle);


  /**
   * Use a named databundle that already exists on the server... 
   * adding files to this has no effect. Bundles can be created with for
   * example bundle creater tool or createSignedBundle -function.
   * @param handle the peach handle
   * @param name
   */
  int techila_peach_newDataBundleWithName(int handle, LPSTR name);


  /**
   * Set the skip digest bit for current data bundle. Setting this to true
   * will skip generating digests of files added to the bundle. Only
   * affect files added after changing the bit.
   * @param handle the peach handle
   * @param skipDigest
   */
  int techila_peach_setDataSkipDigest(int handle, unsigned char skipDigest);


  /**
   * Add a file into the current data bundle.
   * @param handle the peach handle
   * @param file
   */
  int techila_peach_addDataFile(int handle, LPSTR file);


  /**
   * Add a file from a directory into the current data bundle.
   * @param handle the peach handle
   * @param dir the directory where the file is
   * @param file filename
   */
  int techila_peach_addDataFileWithDir(int handle, LPSTR dir,  LPSTR file);


  /**
   * Put a value into the current data bundles extra parameters.
   * @param handle the peach handle
   * @param name
   * @param value
   */
  int techila_peach_putDataExtras(int handle, LPSTR name,  LPSTR value);
#define cleanup techila_cleanup